tree-sitter-weft/test/corpus/declarations.txt
================================================================================
Simple function
================================================================================

fn add(x: i64, y: i64) -> i64 {
  x + y
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (binary_expression
        left: (identifier)
        right: (identifier)))))

================================================================================
Function with effect signature
================================================================================

fn read_file(path: str) -[IO]> str {
  path
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (return_type
      effects: (effect_list
        (effect_type
          name: (type_identifier)))
      type: (primitive_type))
    body: (block
      (identifier))))

================================================================================
Generic function with bounds
================================================================================

fn show<T: Display>(x: T) -> str {
  x
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier)
        bound: (type_bound
          (type_identifier))))
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type_identifier)))
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (identifier))))

================================================================================
Record type
================================================================================

type Point { x: i64, y: i64 }

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    name: (type_identifier)
    body: (type_body
      (record_field
        name: (identifier)
        type: (primitive_type))
      (record_field
        name: (identifier)
        type: (primitive_type)))))

================================================================================
Variant type
================================================================================

type Option<T> { Some(T), None }

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    name: (type_identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier)))
    body: (type_body
      (variant
        name: (type_identifier)
        payload: (variant_payload
          (type_identifier)))
      (variant
        name: (type_identifier)))))

================================================================================
Trait declaration
================================================================================

trait Display {
  fn display(self: i64) -> str
}

--------------------------------------------------------------------------------

(source_file
  (trait_declaration
    name: (type_identifier)
    (function_signature
      name: (function_name
        (identifier))
      parameters: (parameters
        (parameter
          type: (primitive_type)))
      return_type: (return_type
        type: (primitive_type)))))

================================================================================
Impl block
================================================================================

impl Display for Point {
  fn display(self: i64) -> str {
    "point"
  }
}

--------------------------------------------------------------------------------

(source_file
  (impl_block
    trait: (type_identifier)
    type: (type_identifier)
    (function_declaration
      name: (function_name
        (identifier))
      parameters: (parameters
        (parameter
          type: (primitive_type)))
      return_type: (return_type
        type: (primitive_type))
      body: (block
        (string)))))

================================================================================
Effect declaration
================================================================================

effect State {
  fn get() -> i64
  fn put(val: i64) -> i64
}

--------------------------------------------------------------------------------

(source_file
  (effect_declaration
    name: (type_identifier)
    (function_signature
      name: (function_name
        (identifier))
      parameters: (parameters)
      return_type: (return_type
        type: (primitive_type)))
    (function_signature
      name: (function_name
        (identifier))
      parameters: (parameters
        (parameter
          name: (identifier)
          type: (primitive_type)))
      return_type: (return_type
        type: (primitive_type)))))

================================================================================
Use declaration
================================================================================

use "compiler/storage.weft"

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    path: (string)))
