tree-sitter-weft/test/corpus/expressions.txt
================================================================================
Integer literal
================================================================================

fn main() -> i64 { 42 }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (integer))))

================================================================================
Let binding
================================================================================

fn main() -> i64 {
  let x = 42
  x
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (let_expression
        pattern: (binding_pattern
          (identifier))
        value: (integer))
      (identifier))))

================================================================================
If-else expression
================================================================================

fn main() -> i64 {
  if x > 0 { 1 } else { 0 }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (if_expression
        condition: (binary_expression
          left: (identifier)
          right: (integer))
        consequence: (block
          (integer))
        alternative: (block
          (integer))))))

================================================================================
Match expression
================================================================================

fn main() -> i64 {
  match x {
    0 -> 1
    n -> n + 1
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (match_expression
        value: (identifier)
        (match_arm
          pattern: (integer_pattern
            (integer))
          body: (integer))
        (match_arm
          pattern: (binding_pattern
            (identifier))
          body: (binary_expression
            left: (identifier)
            right: (integer)))))))

================================================================================
Pipe expression
================================================================================

fn main() -> i64 {
  x |> f(y) |> g(z)
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (binary_expression
        left: (binary_expression
          left: (identifier)
          right: (call_expression
            function: (identifier)
            arguments: (arguments
              (argument
                value: (identifier)))))
        right: (call_expression
          function: (identifier)
          arguments: (arguments
            (argument
              value: (identifier))))))))

================================================================================
Handle expression
================================================================================

fn main() -> i64 {
  handle computation() {
    State.get() -> resume(42)
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (handle_expression
        expression: (call_expression
          function: (identifier)
          arguments: (arguments))
        (handler_clause
          effect: (effect_reference
            name: (type_identifier))
          operation: (identifier)
          parameters: (handler_parameters)
          body: (resume_expression
            value: (parenthesized_expression
              (integer))))))))

================================================================================
Lambda expression
================================================================================

fn main() -> i64 {
  let f = (x, y) => x + y
  f
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (let_expression
        pattern: (binding_pattern
          (identifier))
        value: (lambda_expression
          (parameter
            name: (identifier))
          (identifier)
          body: (binary_expression
            left: (identifier)
            right: (identifier))))
      (identifier))))

================================================================================
For-range loop
================================================================================

fn main() -> i64 {
  for i in 0..10 {
    i
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (for_expression
        pattern: (binding_pattern
          (identifier))
        iterator: (binary_expression
          left: (integer)
          right: (integer))
        body: (block
          (identifier))))))

================================================================================
String interpolation
================================================================================

fn main() -> i64 {
  i"hello {name}"
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (interpolated_string
        (interpolated_string_text)
        (interpolation
          expression: (identifier))))))

================================================================================
Plain and escaped interpolation braces
================================================================================

fn main() -> str {
  "plain {name} }"
  i"{{name}} = {({ value: 42 }).value}"
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (string)
      (interpolated_string
        (interpolated_string_text)
        (interpolated_string_text)
        (interpolation
          expression: (field_expression
            receiver: (parenthesized_expression
              (anonymous_record_expression
                (field_initializer
                  name: (identifier)
                  value: (integer))))
            field: (identifier)))))))

================================================================================
Expression callees
================================================================================

fn direct() -> i64 { (pair.0)(1) }
fn returned() -> i64 { make()(1) }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (function_name (identifier))
    (parameters)
    (return_type (primitive_type))
    (block
      (call_expression
        (parenthesized_expression
          (field_expression (identifier) (integer)))
        (arguments (argument (integer))))))
  (function_declaration
    (function_name (identifier))
    (parameters)
    (return_type (primitive_type))
    (block
      (call_expression
        (call_expression (identifier) (arguments))
        (arguments (argument (integer)))))))

================================================================================
Raw strings end at their first terminator and take members
================================================================================

fn main() -> i64 {
  let quoted = r#"say "hi""#
  let hashed = r##"a"#b"##
  let next = r#"x"#
  r#"\n"#.len()
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (function_name
      (identifier))
    (parameters)
    (return_type
      (primitive_type))
    (block
      (let_expression
        (binding_pattern
          (identifier))
        (raw_string))
      (let_expression
        (binding_pattern
          (identifier))
        (raw_string))
      (let_expression
        (binding_pattern
          (identifier))
        (raw_string))
      (call_expression
        (field_expression
          (raw_string)
          (identifier))
        (arguments)))))
