tree-sitter-weft/test/corpus/generic_records.txt
================================================================================
Generic record constructors retain explicit and qualified argument syntax
================================================================================

fn records() -> i64 {
  let first = Packet<i64> { value: 42 }
  let second = messages.Packet<str> { value: "ready" }
  0
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (function_name
      (identifier))
    (parameters)
    (return_type
      (primitive_type))
    (block
      (let_expression
        (binding_pattern
          (identifier))
        (record_expression
          (type_identifier)
          (value_type_arguments
            (primitive_type))
          (field_initializer
            (identifier)
            (integer))))
      (let_expression
        (binding_pattern
          (identifier))
        (record_expression
          (identifier)
          (type_identifier)
          (value_type_arguments
            (primitive_type))
          (field_initializer
            (identifier)
            (string))))
      (integer))))
