tree-sitter-weft/test/corpus/grammar_services.txt
================================================================================
Generic module handler implementation
================================================================================

effect Cell<T> { fn get() -> T }
pub implements<T> Cell<T>(initial: T) {
  Cell<T>.get() -> resume(initial)
}

--------------------------------------------------------------------------------

(source_file
  (effect_declaration
    name: (type_identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier)))
    (function_signature
      name: (function_name
        (identifier))
      parameters: (parameters)
      return_type: (return_type
        type: (type_identifier))))
  (handler_implementation
    visibility: (visibility)
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier)))
    effect: (effect_reference
      name: (type_identifier)
      type_arguments: (type_arguments
        (type_identifier)))
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type_identifier)))
    (handler_clause
      effect: (effect_reference
        name: (type_identifier)
        type_arguments: (type_arguments
          (type_identifier)))
      operation: (identifier)
      parameters: (handler_parameters)
      body: (resume_expression
        value: (parenthesized_expression
          (identifier))))))

================================================================================
Default module handler declaration
================================================================================

default handler terminal()
fn main() -> nil { nil }

--------------------------------------------------------------------------------

(source_file
  (default_handler_declaration
    configuration: (handler_configuration
      module: (identifier)
      arguments: (arguments)))
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (nil_literal))))

================================================================================
Handler installation as an argument and projection receiver
================================================================================

fn main() -> i64 {
  let value = consume(with state<i64>(42) { State<i64>.get() })
  with record() { query() }.value + value
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (let_expression
        pattern: (binding_pattern
          (identifier))
        value: (call_expression
          function: (identifier)
          arguments: (arguments
            (argument
              value: (with_handler_expression
                configuration: (handler_configuration
                  module: (identifier)
                  type_arguments: (type_arguments
                    (primitive_type))
                  arguments: (arguments
                    (argument
                      value: (integer))))
                body: (block
                  (call_expression
                    function: (field_expression
                      receiver: (generic_value_expression
                        name: (type_identifier)
                        type_arguments: (value_type_arguments
                          (primitive_type)))
                      field: (identifier))
                    arguments: (arguments))))))))
      (binary_expression
        left: (field_expression
          receiver: (with_handler_expression
            configuration: (handler_configuration
              module: (identifier)
              arguments: (arguments))
            body: (block
              (call_expression
                function: (identifier)
                arguments: (arguments))))
          field: (identifier))
        right: (identifier)))))

================================================================================
Named and inline handlers compose
================================================================================

fn main() -> i64 {
  handle with simulated() { read() } {
    Missing.fail() -> 42
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (handle_expression
        expression: (with_handler_expression
          configuration: (handler_configuration
            module: (identifier)
            arguments: (arguments))
          body: (block
            (call_expression
              function: (identifier)
              arguments: (arguments))))
        (handler_clause
          effect: (effect_reference
            name: (type_identifier))
          operation: (identifier)
          parameters: (handler_parameters)
          body: (integer))))))

================================================================================
Associated bindings and projections
================================================================================

trait Source { type Item fn item(self) -> Self.Item }
fn read<S: Source & {type Item = i64}>(source: S) -> S.Item { source.item() }

--------------------------------------------------------------------------------

(source_file
  (trait_declaration
    name: (type_identifier)
    (associated_type_declaration
      name: (type_identifier))
    (function_signature
      name: (function_name
        (identifier))
      parameters: (parameters
        (parameter))
      return_type: (return_type
        type: (qualified_type
          module: (self_type)
          name: (type_identifier)))))
  (function_declaration
    name: (function_name
      (identifier))
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier)
        bound: (type_bound
          (intersection_type
            left: (type_identifier)
            right: (structural_record_type
              (associated_type_binding
                name: (type_identifier)
                type: (primitive_type)))))))
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type_identifier)))
    return_type: (return_type
      type: (qualified_type
        module: (type_identifier)
        name: (type_identifier)))
    body: (block
      (call_expression
        function: (field_expression
          receiver: (identifier)
          field: (identifier))
        arguments: (arguments)))))

================================================================================
Lowercase effect parameters in generic methods
================================================================================

type Box<T> { Box(T) }
impl<T> Box<T> {
  fn apply<U, e>(self, value: T, f: (T) -[e]> U) -[e]> U { f(value) }
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    name: (type_identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier)))
    body: (type_body
      (variant
        name: (type_identifier)
        payload: (variant_payload
          (type_identifier)))))
  (impl_block
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier)))
    type: (generic_type
      name: (type_identifier)
      arguments: (type_arguments
        (type_identifier)))
    (function_declaration
      name: (function_name
        (identifier))
      type_parameters: (type_parameters
        (type_parameter
          name: (type_identifier))
        (type_parameter
          name: (identifier)))
      parameters: (parameters
        (parameter)
        (parameter
          name: (identifier)
          type: (type_identifier))
        (parameter
          name: (identifier)
          type: (function_type
            (type_identifier)
            effects: (effect_list
              (effect_type
                name: (identifier)))
            return_type: (type_identifier))))
      return_type: (return_type
        effects: (effect_list
          (effect_type
            name: (identifier)))
        type: (type_identifier))
      body: (block
        (call_expression
          function: (identifier)
          arguments: (arguments
            (argument
              value: (identifier))))))))

================================================================================
Bare break cannot consume the next match arm
================================================================================

fn run(value: Option<i64>) -> nil {
  loop {
    match value {
      None -> break
      Some(item) -> break
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (generic_type
          name: (type_identifier)
          arguments: (type_arguments
            (primitive_type)))))
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (loop_expression
        body: (block
          (match_expression
            value: (identifier)
            (match_arm
              pattern: (constructor_pattern
                name: (type_identifier))
              body: (break_expression))
            (match_arm
              pattern: (constructor_pattern
                name: (type_identifier)
                (binding_pattern
                  (identifier)))
              body: (break_expression))))))))

================================================================================
Break values use parentheses and return has an operand
================================================================================

fn run(value: Option<i64>) -> i64 {
  loop {
    match value {
      None -> break(42)
      Some(item) -> return item
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (generic_type
          name: (type_identifier)
          arguments: (type_arguments
            (primitive_type)))))
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (loop_expression
        body: (block
          (match_expression
            value: (identifier)
            (match_arm
              pattern: (constructor_pattern
                name: (type_identifier))
              body: (break_expression
                value: (integer)))
            (match_arm
              pattern: (constructor_pattern
                name: (type_identifier)
                (binding_pattern
                  (identifier)))
              body: (return_expression
                value: (identifier)))))))))
