tree-sitter-weft/test/corpus/numeric_literals.txt
================================================================================
Radix and separator integer spellings
================================================================================

fn main() -> i64 { 0xAB_cd + 0b10_01 + 12_345 }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (binary_expression
        left: (binary_expression
          left: (integer)
          right: (integer))
        right: (integer)))))

================================================================================
Separator decimal float components
================================================================================

fn main() -> f64 { 1_2.3_4e-0_1 + 1_0e+1_2 }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (binary_expression
        left: (float)
        right: (float)))))

================================================================================
Decimal tuple position preserves integer node
================================================================================

fn main() -> i64 { (0x10, 0b11).1 }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameters)
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (field_expression
        receiver: (tuple_expression
          (integer)
          (integer))
        field: (integer)))))
